# sib

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  cliff.toml
.github/workflows/: release.yml
src/: README.md  app.rs  context.rs  effect.rs  lib.rs  logging.rs  main.rs  message.rs  model.rs  tui.rs
src/app/: effects.rs  filter.rs  keys.rs  mod.rs  mode.rs  render_context.rs  run.rs  tree.rs  update.rs  view.rs
src/app/panels/: filter.rs  input.rs  liveview.rs  mod.rs  tree.rs
src/config/: defaults.rs  loader.rs  mod.rs  setup.rs
src/domain/: mod.rs  note.rs  selection.rs  tokenizer.rs  tree.rs
src/message/: mod.rs
src/panels/: filter.rs  input.rs  liveview.rs  mod.rs  notes.rs  tree.rs
src/services/: editor.rs  mod.rs  note.rs  parse.rs
src/services/ranker/: constants.rs  mod.rs  score.rs
src/test_utils/fixtures/: mod.rs  note.rs  note_env.rs  token.rs  usage_stats.rs
src/test_utils/helpers/: mod.rs
src/tui/: input.rs  layout.rs  mod.rs  render.rs
src/tui/widgets/: filters.rs  input.rs  liveview.rs  metadata.rs  mod.rs  notes.rs  tree.rs
src/ui/: glyphs.rs  icons.rs  mod.rs  renderer.rs
src/widgets/: filter.rs  input.rs  liveview.rs  mod.rs  notes.rs  tree.rs
tests/: parse_service.rs
tests/fixtures/: notes.rs
tests/helpers/: mod.rs
