[package]
name = "sib"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
dirs = "6.0.0"
rand = "0.10.0"
ratatui = "0.30.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_yaml_ng = "0.10.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "time", "chrono"] }
walkdir = "2.5.0"
